# blog

./: .gitignore  1.html  Cargo.toml  README.md  about.html  blog.html  code.html  config.toml  example_post.html  home.html  html  index.html  layout.html  math.html  new_layout.html  post.html  posts.html  projects.html  style.css  test.css  test.html  test.md
assets/: profile.avif  style.css
blog_new/: Cargo.toml  README.md
blog_new/assets/: style.css
blog_new/markdown/: Post Processing Sucks.md  README.MD  code.md
blog_new/site/: index.html  post.html  projects.html
blog_new/src/: main.rs  post.rs  post_list.rs
blog_new/templates/: post.html  post_list.html  post_list_item.html
blog_old/: index.html
blog_old/assets/: profile_cut.avif
blog_old/old/: 1.html  math.html  posts.html  projects.html
blog_old/styles/: old_style.css
blog_old/templates/: list_item.html  posts.html
content/: _index.md  markdown-syntax.md  valve-and-cheating.md
markdown/: I can't play video games anymore.md  code.md  example code.md  example markdown.md  example.md  example_math.md  markdown-reference.md  sort-by-album-artist.md  stop-using-the-artist-tag.md  table_test.md
markdown/old/: README.md
md2html/: Cargo.toml  example.md  posts.html  posts_compiled.html  test.html  test.md
md2html/markdown/: test.md  the world sucks and so do you.md
md2html/posts/: example post.md  test.md
md2html/src/: main.rs
md2html/templates/: header.html  (+3 more)
old/: about.html  example_post.html  index.html
site/: index.html
src/: hex.rs  html.rs  main.rs  syntax_highlighting.rs
styles/: style.css
templates/: head.html  header.html  index.html  index_item.html  post.html  post_list.html  post_list_item.html
(+7 files in other folders)
