[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
minify = []

[dependencies]
pulldown-cmark = { version = "0.9.3" }
syntect = "5.1.0"
mini = { path = "../mini", version = "0.1.0", features = ["profile"] }
winwalk = { version = "0.2.2", path = "../winwalk" }
