[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[features]
# TODO: Feature flags are broken
profile = ["mini/profile"]
info = ["mini/info"]
warn = ["mini/warn"]
error = ["mini/error"]
tailwind = []

[dependencies]
pulldown-cmark = { version = "0.9.3" }
syntect = { version = "5.2.0", default-features = false, features = [
    "default-syntaxes",
    "default-themes",
    "html",
    "parsing",
    "regex-onig",
    "plist-load"
] }
# mini = { path = "../mini", version = "0.1.0", features = ["info", "profile"] }
mini = { git = "https://github.com/zfphex/mini" , version = "0.1.0", features = ["info", "profile"] }
walkdir = "2.5.0"
# winwalk = { version = "0.2.2", path = "../winwalk" }